<resources>
    <string name="app_name">App MAIN</string>
    <string name="titlelogo">3rDeveloper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="add_apontamento">Medidas</string>
    <string name="action_settings">Intervalo</string>
    <string name="action_fechar_app">Fechar o app</string>
    <string name="action_cleanPreferences">Sair</string>
    <string name="app_title_login">Bem vindo ao conversa com bla!</string>
    <string name="action_fragment">Fragment</string>
    <string name="action_event">Evento</string>
    <string name="action_exception">Rastreamento de Exception</string>
    <string name="str_informar">Informar</string>
    <string name="strLyLoginHintInputEmail">Email</string>
    <string name="strLyLoginHintInputPassword">Password</string>
    <string name="strLyLoginButtonLogin">Login</string>
    <string name="strLyLoginTextViewAccount">Cadastre-se aqui!</string>
    <string name="strLyLoginUserNameError">Entre com o nome do usuário</string>
    <string name="strLyLoginPassWordError">Entre com a senha do usuário</string>
    <string name="strLyLoginloginfailed">Falha no login</string>
    <string name="strLyLoginUsername_error">Falha no nome</string>
    <string name="strLyLoginPassword_error">Falha na senha</string>
    <string name="strLyLoginStatusloginok">Sucesso no Login</string>
    <string name="prefArq_userLogado">prefArq_userLogado</string>
    <string name="prefJSON_userLogado">json</string>
    <string name="prefStatus_userLogado">status</string>
    <string name="prefDataTime_userLogado">dataTime</string>
    <string name="prefLatitude_userLogado">latitude</string>
    <string name="prefLongitude_userLogado">longitude</string>
    <string name="prefAltitude_userLogado">altitude</string>
    <string name="prefSpeed_userLogado">speed</string>
    <string name="prefArq_formLogin">prefArq_formLogin</string>
    <string name="prefArq_userLogadoApontamento">prefArq_userLogadoApontamento</string>
    <string name="prefStatus_userLogadoApontamento">status</string>
    <string name="str_SimpleDateFormat">MMM dd,yyyy HH:mm</string>
    <string name="str_atencao">Atenção</string>
    <string name="str_infoPermissao">É necessária para o funcionamento do sistema!  Favor ir em configurações, selecionar o app e adicionar as permissões negada!</string>
    <string name="str_finalizar">Finalizar</string>
    <string name="str_infoPermissaoNeverAgain">Você só poderá usar o sistema habilitando a permissão em configurações, selecionar o app e adicionar as permissão negada!</string>
    <string name="strLyCadastroDeUsuarioTitle">Cadastro de Usuário</string>
    <string name="strLyCadastroDeUsuarioTextViewEmail">Email:</string>
    <string name="strLyCadastroDeUsuarioEditTextHintEmail">Entre com o email</string>
    <string name="strLyCadastroDeUsuarioTextViewSenha">Senha:</string>
    <string name="strLyCadastroDeUsuarioEditTextHintSenha">Entre com a senha</string>
    <string name="strLyCadastrofailed">Falha no cadastro do novo usuário!</string>
    <string name="strLyCadastroDeUsuarioTextViewFoto">Sua foto aqui!</string>
    <string name="strLyCadastroDeUsuarioTextViewNome">Nome:</string>
    <string name="strLyCadastroDeUsuarioEditTextHintNome">Entre com o nome</string>
    <string name="strLyCadastroDeConfServTitle">Cadastro de Configuração de Serviço</string>
    <string name="strLyCadastroDeConfServOptionAllDays">Todos os Dias</string>
    <string name="strLyCadastroDeConfServOption_5">A cada 5 dias</string>
    <string name="strLyCadastroDeConfServOption_10">A cada 10 dias</string>
    <string name="strLyCadastroDeConfServOption_15">A cada 15 dias</string>
    <string name="strLyCadastroDeConfServOption_20">A cada 20 dias</string>
    <string name="strLyCadastroDeConfServRadioOption">Selecione uma opção</string>
    <string name="strLyCadastroConfServfailed">Falha no cadastro de configuração de serviço!</string>
    <string name="prefArqValueConfServ">prefArqValueConfServ</string>
    <string name="idConfServico">idServico</string>
    <string name="dsConfServicoDefault">default</string>
    <string name="dsConfServicoDefaultAlldays">1</string>
    <string name="prefArqInfoMedidas">prefArqInfoMedidas</string>
    <string name="prefArqInfoMedidasVal">prefArqInfoMedidasVal</string>
    <string name="folder">"/POSSO_DESENV/"</string>
    <string name="folderError">Folder POSSO indisponível</string>
    <string name="sqlCreateTableRedeSocial">
        CREATE TABLE RedeSocial (idRedeSocial INTEGER PRIMARY KEY AUTOINCREMENT, dsRedeSocial TEXT);
    </string>
    <string name="sqlCreateTableConfServ">
        CREATE TABLE Servico (idServico INTEGER PRIMARY KEY AUTOINCREMENT, dsServico TEXT);
    </string>
    <string name="sqlCreateTableUsuario">
        CREATE TABLE Usuario (idUsuario INTEGER PRIMARY KEY AUTOINCREMENT, dsNome TEXT, dsLogin TEXT, dsSenha TEXT, namePhoto TEXT, bytePhoto Blob,
       idRedeSocial INTEGER, idServico    INTEGER,
       FOREIGN KEY (idRedeSocial) REFERENCES RedeSocial(idRedeSocial),
       FOREIGN KEY (idServico) REFERENCES Servico(idServico));
    </string>
    <string name="sqlCreateTableApontamento">
        CREATE TABLE Apontamento (idApontamento INTEGER PRIMARY KEY AUTOINCREMENT, dataHora INTEGER, dsDataHora TEXT, vlPeso FLOAT, vlAltura FLOAT, imc FLOAT, dsStatus TEXT, dsGPS TEXT, latitude TEXT, longitude TEXT, idUsuario INTEGER, FOREIGN KEY (idUsuario) REFERENCES Usuario(idUsuario));
    </string>
    <string name="sqlInsertTableConfService">
        CREATE TABLE Apontamento (idApontamento INTEGER PRIMARY KEY AUTOINCREMENT, dataHora INTEGER, dsDataHora TEXT, vlPeso FLOAT, vlAltura FLOAT, idUsuario INTEGER, FOREIGN KEY (idUsuario) REFERENCES Usuario(idUsuario));
    </string>
    <string name="idTblRedeSocial">idRedeSocial</string>
    <string name="sqlCargaRedeSocialPossoAjudar">INSERT INTO RedeSocial(dsRedeSocial) values  ("'"PossoAjudar?"'");</string>
    <string name="sqlCargaRedeSocialFacebook">INSERT INTO RedeSocial(dsRedeSocial) values  ("'"Facebook"'");</string>
    <string name="sqlCargaRedeSocialInstagram">INSERT INTO RedeSocial(dsRedeSocial) values ("'"Instagram"'");</string>
    <string name="sqlCargaRedeSocialLinkedIn">INSERT INTO RedeSocial(dsRedeSocial) values ("'"LinkedIn"'");</string>
    <string name="sqlCargaRedeSocialTwitter">INSERT INTO RedeSocial(dsRedeSocial) values ("'"Twitter"'");</string>
    <string name="sqlCargaRedeSocialWhatsApp">INSERT INTO RedeSocial(dsRedeSocial) values ("'"WhatsApp"'");</string>
    <string name="sqlCargaRedeSocialFacebookMessenger">INSERT INTO RedeSocial(dsRedeSocial) values ("'"Facebook Messenger"'");</string>
    <string name="sqlCargaRedeSocialYouTube">INSERT INTO RedeSocial(dsRedeSocial) values ("'"YouTube"'");</string>
    <string name="sqlCargaRedeSocialSnapchat">INSERT INTO RedeSocial(dsRedeSocial) values ("'"Snapchat"'");</string>
    <string name="sqlCargaRedeSocialGoogle">INSERT INTO RedeSocial(dsRedeSocial) values ("'"Google+"'");</string>
    <string name="sqlCargaRedeSocialPinterest">INSERT INTO RedeSocial(dsRedeSocial) values ("'"Pinterest"'");</string>
    <string name="sqlCargaConfServAlldays">INSERT INTO Servico(dsServico) values ("'"Todos os dias"'");</string>
    <string name="sqlCargaConfServAllweek">INSERT INTO Servico(dsServico) values ("'"A cada 5 dias"'");</string>
    <string name="sqlCargaConfServAllweekend">INSERT INTO Servico(dsServico) values ("'"A cada 10 dias"'");</string>
    <string name="sqlCargaConfServ15days">INSERT INTO Servico(dsServico) values ("'"A cada 15 dias"'");</string>
    <string name="sqlCargaConfServAllmonth">INSERT INTO Servico(dsServico) values ("'"A cada 20 dias"'");</string>
    <string name="dsNameTblUser">Usuario</string>
    <string name="sqlAlterTblUsuario">ALTER TABLE Usuarios ADD COLUMN nrObs TEXT</string>
    <string name="dsNomeTblUser">dsNome</string>
    <string name="dsLoginTblUser">dsLogin</string>
    <string name="dsSenhaTblUser">dsSenha</string>
    <string name="idTblUser">idUsuario</string>
    <string name="namePhoto">namePhoto</string>
    <string name="bytePhoto">bytePhoto</string>
    <string name="dsMsg">Olá</string>
    <string name="dsNameTblServico">Usuario</string>
    <string name="sqlAlterTblServico">ALTER TABLE Servico ADD COLUMN Obs TEXT</string>
    <string name="idTblServico">idServico</string>
    <string name="dsServico">dsServico</string>
    <string name="dsGeneric_A">dsGeneric_A</string>
    <string name="dsGeneric_B">dsGeneric_B</string>
    <string name="dsGeneric_C">dsGeneric_C</string>
    <string name="dsGeneric_D">dsGeneric_D</string>
    <string name="dsGeneric_E">dsGeneric_E</string>
    <string name="dsGeneric_F">dsGeneric_F</string>
    <string name="idTblUserAptmento">idApontamento</string>
    <string name="dsNameTblUserAptmento">Apontamento</string>
    <string name="dsAlturaTblUserAptmento">vlAltura</string>
    <string name="dsPesoTblUserAptmento">vlPeso</string>
    <string name="dsDataTimeTblUserAptmento">dsDataHora</string>
    <string name="imcTblUserAptmento">imc</string>
    <string name="dsStatusTblUserAptmento">dsStatus</string>
    <string name="dataTimeTblUserAptmento">dataHora</string>
    <string name="dsGPD">dsGPS</string>
    <string name="dsLatitude">latitude</string>
    <string name="dsLongitude">longitude</string>
    <string name="errorDbCreateMemoriaInterna">NÃO FOI POSSÍVEL CRIAR O BANCO NA MEMÓRIA INTERNA. Error em: MySQLiteOpenHelper</string>
    <string name="errorDbWriteMemoriaInterna">NÃO FOI POSSÍVEL ESCREVER O BANCO NA MEMÓRIA INTERNA. Error em: getWritableDatabase</string>
    <string name="sucessDbInterno">Banco interno criado com sucesso!</string>
    <string name="errorCreateFolderExterna">Error ao criar o FOLDER</string>
    <string name="errorDbCreateMemoriaExterna">NÃO FOI POSSÍVEL CRIAR O BANCO NO SDCARD. Error em: MySQLiteOpenHelper</string>
    <string name="errorDbWriteMemoriaExterna">NÃO FOI POSSÍVEL ESCREVER O BANCO NO SDCARD. Error em: getWritableDatabase</string>
    <string name="sucessDbExterno">Banco externo criado com sucesso!</string>
    <string name="contatos">Contatos</string>
    <string name="lblNome">Nome:</string>
    <string name="lblTelefone">Telefone:</string>
    <string name="lblEndereco">Endereco:</string>
    <string name="btnSalvar">Salvar</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="app_name_frag">Exemplo Fragment</string>
    <string name="categoryId">Apontamento</string>
    <string name="actionId">Informar PESO X ALTURA</string>
    <string name="labelId">PESO X ALTURA Button pressionado!</string>
    <string name="mostrar">mostrar</string>
    <string name="start">Iniciar</string>
    <string name="clean">Limpar</string>
    <string name="dsAltura">Altura</string>
    <string name="dsPeso">Peso</string>
    <string name="alertApontamento">Você deve informar sua Altura e Peso!</string>
    <string name="strLyCadastroApontamentoTextViewAltura">Informe sua altura!!!</string>
    <string name="strLyCadastroApontamentoTextViewPeso">Informe seu peso</string>
    <string name="strLyCadastroApontamentoStrDataTime">Ocorreu um error ao atribuir a data do Apontamento!</string>
    <string name="strLyCadastrofailedApontamento">Falha no cadastro do apontamento!</string>
    <string name="strLyMontaListafailedApontamento">Falha na exibição da lista de apontameto!</string>
    <string name="strLyMontaListaSemApontamento">Sem apontameto na data selecionada!</string>
    <string name="text_servico_code">erro: </string>
    <string name="str_tl_sgit_splash_loading">Aguarde</string>
    <string name="str_tl_sgit_splash_inicia_busca">Buscando os dados...</string>
    <string name="text_close">FECHAR</string>
    <string name="strThreadError">Erro no processo da Thread...</string>
    <string name="text_result">IMC é de : </string>
</resources>