<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_cleanpreferences"
        android:orderInCategory="100"
        android:title="@string/action_cleanPreferences"
        app:showAsAction="never"
        android:icon="@drawable/clean16x16"/>

    <item
        android:id="@+id/action_fragment"
        android:orderInCategory="100"
        android:title="@string/action_fragment"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_event"
        android:orderInCategory="100"
        android:title="@string/action_event"
        app:showAsAction="never" />
</menu>
