<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/titulo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/black"
        android:layout_weight="0"/>

    <View
        android:id="@+id/divider"
        android:layout_width="fill_parent"
        android:layout_height="5dp"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/dialog_divider" />

    <ScrollView
        android:id="@+id/cuerpo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.41">

        <!--
        <TextView
            android:id="@+id/contenido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:layout_marginTop="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black" /> -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dimen15dip">


            <EditText
                android:id="@+id/lyApontamentoEditTextAltura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen10dip"
                android:layout_weight="0.28"
                android:ems="10"
                android:textSize="@dimen/dimen12dp"
                android:hint="@string/dsAltura"
                android:inputType="numberDecimal"
                android:layout_marginRight="@dimen/dimen15dip"/>


            <EditText
                android:id="@+id/lyApontamentoEditTextPeso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="0.28"
                android:ems="10"
                android:textSize="@dimen/dimen12dp"
                android:hint="@string/dsPeso"
                android:inputType="numberDecimal"
                android:layout_marginRight="@dimen/dimen15dip"/>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/botonera"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">

        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/dialog_button_selector"
            android:text="@string/start"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/clean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/dialog_button_selector"
            android:text="@string/clean"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>