<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/textViewNavMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen5dp"
            android:hint="@string/dsMsg" />

        <ImageView
            android:id="@+id/imageViewNavPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/textViewNavMsg"
            android:layout_marginTop="@dimen/dimen5dp"
            android:background="@drawable/photo_customizado"
            android:src="@mipmap/person" />

        <TextView
            android:id="@+id/textViewNavNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textViewNavEmail"
            android:layout_alignStart="@+id/textViewNavEmail"
            android:layout_alignTop="@+id/imageViewNavPhoto"
            android:hint="@string/dsNameTblUser" />


        <TextView
            android:id="@+id/textViewNavEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="19dp"
            android:layout_marginStart="19dp"
            android:layout_toEndOf="@+id/imageViewNavPhoto"
            android:layout_toRightOf="@+id/imageViewNavPhoto"
            android:hint="@string/dsLoginTblUser" />

    </RelativeLayout>

</LinearLayout>
